--- a/Tesla_stock_analysis.ipynb
+++ b/Tesla_stock_analysis.ipynb
@@ -985,295 +985,8 @@
         "    *   It uses the `yfinance` library to download historical stock data for Tesla (ticker \"TSLA\").\n",
         "    *   It retrieves the maximum available history (`period=\"max\"`).\n",
         "    *   It resets the index to make the 'Date' a regular column.\n",
-        "# Install required libraries (uncomment if not already installed)\n",
-        "# !pip install yfinance pandas numpy requests beautifulsoup4 matplotlib seaborn plotly scikit-learn prophet ta\n",
         "\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import yfinance as yf\n",
-        "import requests\n",
-        "from bs4 import BeautifulSoup\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "import plotly.graph_objects as go\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.ensemble import GradientBoostingRegressor, RandomForestRegressor, GradientBoostingClassifier\n",
-        "from sklearn.metrics import mean_squared_error, classification_report, roc_auc_score, confusion_matrix\n",
-        "from prophet import Prophet\n",
-        "import ta\n",
-        "\n",
-        "# Suppress warnings\n",
-        "import warnings\n",
-        "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
-        "\n",
-        "# Data Handling (yfinance)\n",
-        "ticker = \"TSLA\"\n",
-        "tesla_data = yf.download(ticker, period=\"max\")\n",
-        "tesla_data.reset_index(inplace=True)\n",
-        "print(\"Tesla Stock Data (first 5 rows):\")\n",
-        "print(tesla_data.head())\n",
-        "\n",
-        "# Data Handling (Web Scraping)\n",
-        "url = \"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0105EN-SkillsNetwork/labs/Module%202/data/financials.html\"\n",
-        "\n",
-        "html_data = requests.get(url).text\n",
-        "\n",
-        "soup = BeautifulSoup(html_data, 'html5lib')\n",
-        "\n",
-        "tables = pd.read_html(str(soup))\n",
-        "\n",
-        "# Assuming the second table contains revenue data\n",
-        "tesla_revenue = tables[1]\n",
-        "\n",
-        "# Rename columns\n",
-        "tesla_revenue.columns = ['Date', 'Revenue']\n",
-        "\n",
-        "# Clean Revenue data\n",
-        "tesla_revenue[\"Revenue\"] = tesla_revenue['Revenue'].str.replace(',|\\$', \"\", regex=True)\n",
-        "tesla_revenue.dropna(inplace=True)\n",
-        "tesla_revenue = tesla_revenue[tesla_revenue['Revenue'] != \"\"]\n",
-        "tesla_revenue['Revenue'] = tesla_revenue['Revenue'].astype(float)\n",
-        "\n",
-        "print(\"\\nTesla Revenue Data (last 5 rows):\")\n",
-        "print(tesla_revenue.tail())\n",
-        "\n",
-        "# KPI Dashboard (Tesla)\n",
-        "latest_close = tesla_data['Close'].iloc[-1]\n",
-        "price_change_1yr = ((tesla_data['Close'].iloc[-1] - tesla_data['Close'].iloc[-252]) / tesla_data['Close'].iloc[-252]) * 100 if len(tesla_data) >= 252 else np.nan\n",
-        "avg_volume_30d = tesla_data['Volume'].rolling(window=30).mean().iloc[-1]\n",
-        "\n",
-        "# Calculate daily returns\n",
-        "tesla_data['Daily_Return'] = tesla_data['Close'].pct_change()\n",
-        "# Calculate annualized volatility (assuming 252 trading days in a year)\n",
-        "annualized_volatility = tesla_data['Daily_Return'].std() * np.sqrt(252) * 100\n",
-        "\n",
-        "latest_revenue = tesla_revenue['Revenue'].iloc[-1]\n",
-        "revenue_growth_5q = ((tesla_revenue['Revenue'].iloc[-1] - tesla_revenue['Revenue'].iloc[-6]) / tesla_revenue['Revenue'].iloc[-6]) * 100 if len(tesla_revenue) >= 6 else np.nan\n",
-        "\n",
-        "print(\"\\nTesla KPI Dashboard:\")\n",
-        "print(f\"Latest Closing Price: ${latest_close:.2f}\")\n",
-        "print(f\"1-Year Price Change: {price_change_1yr:.2f}%\") if not np.isnan(price_change_1yr) else print(\"Insufficient data for 1-Year Price Change\")\n",
-        "print(f\"30-Day Average Trading Volume: {avg_volume_30d:,.0f}\")\n",
-        "print(f\"Annualized Volatility: {annualized_volatility:.2f}%\")\n",
-        "print(f\"Latest Quarterly Revenue: ${latest_revenue:,.0f} million\")\n",
-        "print(f\"5-Quarter Revenue Growth: {revenue_growth_5q:.2f}%\") if not np.isnan(revenue_growth_5q) else print(\"Insufficient data for 5-Quarter Revenue Growth\")\n",
-        "\n",
-        "# Calculate Target Return (next day's percentage change)\n",
-        "tesla_data['Target_Return'] = tesla_data['Close'].pct_change().shift(-1)\n",
-        "\n",
-        "# Normalized Comparison Chart\n",
-        "merged_data = pd.merge(tesla_data[['Date', 'Close']], tesla_revenue[['Date', 'Revenue']], on='Date', how='inner')\n",
-        "\n",
-        "# Normalize Close and Revenue\n",
-        "merged_data['Normalized_Close'] = merged_data['Close'] / merged_data['Close'].iloc[0]\n",
-        "merged_data['Normalized_Revenue'] = merged_data['Revenue'] / merged_data['Revenue'].iloc[0]\n",
-        "\n",
-        "fig = go.Figure()\n",
-        "\n",
-        "fig.add_trace(go.Scatter(x=merged_data['Date'], y=merged_data['Normalized_Close'], mode='lines', name='Normalized Stock Price'))\n",
-        "fig.add_trace(go.Scatter(x=merged_data['Date'], y=merged_data['Normalized_Revenue'], mode='lines', name='Normalized Revenue'))\n",
-        "\n",
-        "fig.update_layout(title='Normalized Stock Price vs. Normalized Revenue Over Time',\n",
-        "                  xaxis_title='Date',\n",
-        "                  yaxis_title='Normalized Value',\n",
-        "                  legend_title='Metric')\n",
-        "fig.show()\n",
-        "\n",
-        "\n",
-        "# Prophet Forecast\n",
-        "prophet_data = tesla_data[['Date', 'Close']].rename(columns={'Date': 'ds', 'Close': 'y'})\n",
-        "\n",
-        "model = Prophet()\n",
-        "model.fit(prophet_data)\n",
-        "\n",
-        "future = model.make_future_dataframe(periods=90)\n",
-        "forecast = model.predict(future)\n",
-        "\n",
-        "fig = model.plot(forecast)\n",
-        "plt.title('Tesla Stock Price Forecast (Prophet)')\n",
-        "plt.xlabel('Date')\n",
-        "plt.ylabel('Closing Price')\n",
-        "plt.show()\n",
-        "\n",
-        "# Technical Indicators\n",
-        "tesla_data['SMA_20'] = ta.trend.sma_indicator(tesla_data['Close'], window=20)\n",
-        "tesla_data['RSI'] = ta.momentum.rsi(tesla_data['Close'], window=14)\n",
-        "\n",
-        "# Plotting Price vs SMA\n",
-        "plt.figure(figsize=(12, 6))\n",
-        "plt.plot(tesla_data['Date'], tesla_data['Close'], label='Close Price')\n",
-        "plt.plot(tesla_data['Date'], tesla_data['SMA_20'], label='20-Day SMA', color='orange')\n",
-        "plt.title('Tesla Close Price vs. 20-Day Simple Moving Average')\n",
-        "plt.xlabel('Date')\n",
-        "plt.ylabel('Price')\n",
-        "plt.legend()\n",
-        "plt.grid(True)\n",
-        "plt.show()\n",
-        "\n",
-        "# Plotting RSI\n",
-        "plt.figure(figsize=(12, 4))\n",
-        "plt.plot(tesla_data['Date'], tesla_data['RSI'], label='14-Day RSI', color='purple')\n",
-        "plt.axhline(70, color='red', linestyle='--', label='Overbought (70)')\n",
-        "plt.axhline(30, color='green', linestyle='--', label='Oversold (30)')\n",
-        "plt.title('Tesla 14-Day Relative Strength Index (RSI)')\n",
-        "plt.xlabel('Date')\n",
-        "plt.ylabel('RSI Value')\n",
-        "plt.legend()\n",
-        "plt.grid(True)\n",
-        "plt.show()\n",
-        "\n",
-        "\n",
-        "# Gradient Boosting Model (Regression)\n",
-        "model_df = tesla_data[['Volume', 'SMA_20', 'RSI', 'Target_Return']].copy()\n",
-        "model_df.dropna(inplace=True)\n",
-        "\n",
-        "X = model_df[['Volume', 'SMA_20', 'RSI']]\n",
-        "y = model_df['Target_Return']\n",
-        "\n",
-        "# Time-series split (no shuffling)\n",
-        "train_size = int(len(model_df) * 0.8)\n",
-        "X_train, X_test = X.iloc[:train_size], X.iloc[train_size:]\n",
-        "y_train, y_test = y.iloc[:train_size], y.iloc[train_size:]\n",
-        "\n",
-        "gbm_reg = GradientBoostingRegressor(n_estimators=100, learning_rate=0.1, max_depth=3, random_state=42)\n",
-        "gbm_reg.fit(X_train, y_train)\n",
-        "y_pred_gbm_reg = gbm_reg.predict(X_test)\n",
-        "\n",
-        "rmse = np.sqrt(mean_squared_error(y_test, y_pred_gbm_reg))\n",
-        "print(f\"\\nGradient Boosting Regressor RMSE: {rmse:.4f}\")\n",
-        "\n",
-        "# Plot actual vs predicted returns\n",
-        "plt.figure(figsize=(12, 6))\n",
-        "plt.plot(y_test.index, y_test.values, label='Actual Returns')\n",
-        "plt.plot(y_test.index, y_pred_gbm_reg, label='Predicted Returns (GBM)', alpha=0.7)\n",
-        "plt.title('Actual vs Predicted Daily Returns (Gradient Boosting Regressor)')\n",
-        "plt.xlabel('Date')\n",
-        "plt.ylabel('Daily Return')\n",
-        "plt.legend()\n",
-        "plt.grid(True)\n",
-        "plt.show()\n",
-        "\n",
-        "# Feature Importance (Regression)\n",
-        "feature_importance = pd.Series(gbm_reg.feature_importances_, index=X.columns).sort_values(ascending=False)\n",
-        "plt.figure(figsize=(8, 5))\n",
-        "sns.barplot(x=feature_importance, y=feature_importance.index)\n",
-        "plt.title('Feature Importance (Gradient Boosting Regressor)')\n",
-        "plt.xlabel('Importance')\n",
-        "plt.ylabel('Feature')\n",
-        "plt.show()\n",
-        "\n",
-        "# Correlation Heatmap of features\n",
-        "plt.figure(figsize=(8, 6))\n",
-        "sns.heatmap(model_df[['Volume', 'SMA_20', 'RSI', 'Target_Return']].corr(), annot=True, cmap='coolwarm', fmt=\".2f\")\n",
-        "plt.title('Correlation Matrix of Features and Target Return')\n",
-        "plt.show()\n",
-        "\n",
-        "\n",
-        "# Trading Strategy Simulation\n",
-        "tesla_data['Predicted_Return_GBM'] = np.nan\n",
-        "# Align predictions with original dataframe index\n",
-        "tesla_data.loc[y_test.index, 'Predicted_Return_GBM'] = y_pred_gbm_reg\n",
-        "\n",
-        "# Create a simple signal: Go long if predicted return is positive\n",
-        "tesla_data['Signal'] = np.where(tesla_data['Predicted_Return_GBM'] > 0, 1, 0)\n",
-        "\n",
-        "# Shift signal by 1 day to act *after* the prediction is made\n",
-        "tesla_data['Signal'] = tesla_data['Signal'].shift(1)\n",
-        "tesla_data.dropna(subset=['Signal'], inplace=True)\n",
-        "\n",
-        "# Calculate Strategy Return\n",
-        "tesla_data['Strategy_Return'] = tesla_data['Target_Return'] * tesla_data['Signal']\n",
-        "\n",
-        "# Simulate Portfolio Value\n",
-        "initial_capital = 10000\n",
-        "tesla_data['Strategy_Portfolio'] = initial_capital * (1 + tesla_data['Strategy_Return']).cumprod()\n",
-        "tesla_data['Market_Portfolio'] = initial_capital * (1 + tesla_data['Target_Return']).cumprod()\n",
-        "\n",
-        "\n",
-        "# Plotting Portfolio Performance\n",
-        "plt.figure(figsize=(12, 6))\n",
-        "plt.plot(tesla_data.index, tesla_data['Strategy_Portfolio'], label='Strategy Portfolio (GBM Signal)')\n",
-        "plt.plot(tesla_data.index, tesla_data['Market_Portfolio'], label='Market Portfolio (Buy and Hold)')\n",
-        "plt.title('Trading Strategy Performance vs. Buy and Hold')\n",
-        "plt.xlabel('Date')\n",
-        "plt.ylabel('Portfolio Value')\n",
-        "plt.legend()\n",
-        "plt.grid(True)\n",
-        "plt.show()\n",
-        "\n",
-        "\n",
-        "# Comparing GBM vs RF Predictions\n",
-        "rf_reg = RandomForestRegressor(n_estimators=100, random_state=42)\n",
-        "rf_reg.fit(X_train, y_train)\n",
-        "y_pred_rf_reg = rf_reg.predict(X_test)\n",
-        "\n",
-        "rmse_rf = np.sqrt(mean_squared_error(y_test, y_pred_rf_reg))\n",
-        "print(f\"\\nRandom Forest Regressor RMSE: {rmse_rf:.4f}\")\n",
-        "\n",
-        "# Plot Actual vs GBM vs RF Predicted Returns\n",
-        "plt.figure(figsize=(14, 7))\n",
-        "plt.plot(y_test.index, y_test.values, label='Actual Returns')\n",
-        "plt.plot(y_test.index, y_pred_gbm_reg, label='Predicted Returns (GBM)', alpha=0.7)\n",
-        "plt.plot(y_test.index, y_pred_rf_reg, label='Predicted Returns (RF)', alpha=0.7, linestyle='--')\n",
-        "plt.title('Actual vs Predicted Daily Returns (GBM vs RF)')\n",
-        "plt.xlabel('Date')\n",
-        "plt.ylabel('Daily Return')\n",
-        "plt.legend()\n",
-        "plt.grid(True)\n",
-        "plt.show()\n",
-        "\n",
-        "\n",
-        "# More Technical Indicators\n",
-        "tesla_data['RSI_14'] = ta.momentum.rsi(tesla_data['Close'], window=14)\n",
-        "tesla_data['MACD'] = ta.trend.macd_diff(tesla_data['Close'])\n",
-        "tesla_data['Stochastic_Oscillator'] = ta.momentum.stoch(tesla_data['High'], tesla_data['Low'], tesla_data['Close'], window=14, smooth_window=3)\n",
-        "\n",
-        "# Recalculate model_df with more indicators\n",
-        "model_df_clf = tesla_data[['Volume', 'SMA_20', 'RSI_14', 'MACD', 'Stochastic_Oscillator', 'Target_Return']].copy()\n",
-        "model_df_clf.dropna(inplace=True)\n",
-        "\n",
-        "# Define Classification Target: 1 if Target_Return > 0, 0 otherwise\n",
-        "model_df_clf['Target_Class'] = np.where(model_df_clf['Target_Return'] > 0, 1, 0)\n",
-        "\n",
-        "X_clf = model_df_clf[['Volume', 'SMA_20', 'RSI_14', 'MACD', 'Stochastic_Oscillator']]\n",
-        "y_clf = model_df_clf['Target_Class']\n",
-        "\n",
-        "# Time-series split (no shuffling)\n",
-        "train_size_clf = int(len(model_df_clf) * 0.8)\n",
-        "X_train_clf, X_test_clf = X_clf.iloc[:train_size_clf], X_clf.iloc[train_size_clf:]\n",
-        "y_train_clf, y_test_clf = y_clf.iloc[:train_size_clf], y_clf.iloc[train_size_clf:]\n",
-        "\n",
-        "# Gradient Boosting Model (Classification)\n",
-        "gbm_clf = GradientBoostingClassifier(n_estimators=100, learning_rate=0.1, max_depth=3, random_state=42)\n",
-        "gbm_clf.fit(X_train_clf, y_train_clf)\n",
-        "\n",
-        "y_pred_clf = gbm_clf.predict(X_test_clf)\n",
-        "y_proba_clf = gbm_clf.predict_proba(X_test_clf)[:, 1] # Probability of the positive class (1)\n",
-        "\n",
-        "print(\"\\nClassification Report (Gradient Boosting Classifier):\")\n",
-        "print(classification_report(y_test_clf, y_pred_clf))\n",
-        "\n",
-        "roc_auc = roc_auc_score(y_test_clf, y_proba_clf)\n",
-        "print(f\"ROC-AUC Score: {roc_auc:.4f}\")\n",
-        "\n",
-        "# Confusion Matrix\n",
-        "cm = confusion_matrix(y_test_clf, y_pred_clf)\n",
-        "plt.figure(figsize=(6, 5))\n",
-        "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=['Predict 0 (Down/Flat)', 'Predict 1 (Up)'], yticklabels=['Actual 0 (Down/Flat)', 'Actual 1 (Up)'])\n",
-        "plt.title('Confusion Matrix')\n",
-        "plt.xlabel('Predicted Label')\n",
-        "plt.ylabel('True Label')\n",
-        "plt.show()\n",
-        "\n",
-        "\n",
-        "# Feature Importance (Classification)\n",
-        "feature_importance_clf = pd.Series(gbm_clf.feature_importances_, index=X_clf.columns).sort_values(ascending=False)\n",
-        "plt.figure(figsize=(8, 5))\n",
-        "sns.barplot(x=feature_importance_clf, y=feature_importance_clf.index)\n",
-        "plt.title('Feature Importance (Gradient Boosting Classifier)')\n",
-        "plt.xlabel('Importance')\n",
-        "plt.ylabel('Feature')\n",
-        "plt.show()\n",
+        "3.  **Web Scraping and Data Cleaning (Revenue Table)**\n",
         "    *   It uses `pandas.read_html` to extract tables from the parsed HTML.\n",
         "    *   It selects the second table (`tables[1]`) which is assumed to contain the revenue data.\n",
         "    *   It renames the columns to 'Date' and 'Revenue'.\n",
